--- a/index.html
+++ b/index.html
@@ -24,23 +24,30 @@
 <body>
     <div class="content-wrap">
         <div class="content">
-            <h1>Hello there!</h1>
+						<h1>
+							Hi there!
+						</h2>
 						<h2>
-							I'm Bob, a user experience designer that uses design to solve problems before they happen.
+							I'm Bob Orchard, a multi-diciplinary designer that focuses on user experience and design to solve complex problems.
 						</h2>
             <p>
-							I'm currently heading up Design at <a class="link-1" href="https://chargify.com" target="_blank">Chargify</a>.
+							Currently heading up Design at <a class="link-1" href="https://chargify.com" target="_blank">Chargify</a>.
 						</p>
 						<p>
-							You can find a selection of my work <a class="link-1" href="https://dribbble.com/boborchard" target="_blank">here</a> and code that I've committed <a class="link-1" href="https://github.com/boborchard" target="_blank">here</a>.
+							I post some of my design work <a class="link-1" href="https://dribbble.com/boborchard" target="_blank">here</a> and commit code <a class="link-1" href="https://github.com/boborchard" target="_blank">here</a>.
 						</p>
             <p>
-              I enjoy <a class="link-1" href="https://twitter.com/boborchard" target="_blank">tweeting</a> about user experience &amp; taking
-              <a class="link-1" href="https://www.instagram.com/boborchard" target="_blank">photos</a>, and <a class="link-1" href="https://www.instagram.com/thewebnomads">traveling full-time</a> in my <span style="text-decoration: line-through">custom RV</span> mobile office.
+              You can find me <a href="https://www.instagram.com/boborchard/" target="_blank" class="link-1">snapping photos</a>, traveling the abroad, and making things with my hands. My wife and I <a class="link-1" href="https://www.instagram.com/thewebnomads">travel &amp; live full-time</a> in our <span style="text-decoration: line-through">custom RV</span> mobile office.
             </p>
             <p>
 							For collaboration or questions; <br>
           		<a class="link-2" href="mailto:mail@boborchard.com">mail@boborchard.com</a>
+						</p>
+						<p>
+							<a class="social-link twitter" href="https://twitter.com/boborchard" target="_blank"></a>
+							<a class="social-link dribbble" href="http://dribbble.com/boborchard" target="_blank"></a>
+							<a class="social-link github" href="http://github.com/boborchard" target="_blank"></a>
+							<a class="social-link linkedin" href="https://www.linkedin.com/in/boborchard" target="_blank"></a>
 						</p>
         </div>
     </div>
