--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							Hi there!
 						</h2>
 						<h2>
-							I'm Bob Orchard, a multi-diciplinary designer that focuses on user experience and design to solve complex problems.
+							I'm Bob Orchard, a multi-disciplinary designer that focuses on user experience and design to solve complex problems.
 						</h2>
             <p>
 							Currently heading up Design at <a class="link-1" href="https://chargify.com" target="_blank">Chargify</a>.
