Update Home Page

--- a/index.html
+++ b/index.html
@@ -28,16 +28,19 @@
 							Hi there!
 						</h2>
 						<h2>
-							I'm Bob Orchard, a multi-disciplinary designer that focuses on user experience and design to solve complex problems.
+							I'm Bob Orchard and I help funded startups and established businesses improve the user experience and design of their SaaS products.
 						</h2>
-            <p>
-							Currently heading up Design at <a class="link-1" href="https://chargify.com" target="_blank">Chargify</a>.
+            					<p>
+							Currently building <a class="link-1" href="https://campgroundbooking.com" target="_blank">CampgroundBooking</a>
+						</p>
+						<p>
+							Formerly at at <a class="link-1" href="https://chargify.com" target="_blank">Chargify</a>, <a class="link-1" href="http://tinypint.com" target="_blank">Tinypint</a>, and <a class="link-1" href="https://funeralone.com" target="_blank">FuneralOne</a>
 						</p>
 						<p>
 							I post some of my design work <a class="link-1" href="https://dribbble.com/boborchard" target="_blank">here</a> and commit code <a class="link-1" href="https://github.com/boborchard" target="_blank">here</a>.
 						</p>
             <p>
-              You can find me <a href="https://www.instagram.com/boborchard/" target="_blank" class="link-1">snapping photos</a>, traveling the abroad, and making things with my hands. My wife and I <a class="link-1" href="https://www.instagram.com/thewebnomads">travel &amp; live full-time</a> in our <span style="text-decoration: line-through">custom RV</span> mobile office.
+              You can find me <a href="https://www.instagram.com/boborchard/" target="_blank" class="link-1">snapping photos</a>, traveling around North America, and making things with my hands. My wife and I <a class="link-1" href="https://www.instagram.com/thewebnomads">travel &amp; live full-time</a> in our <span style="text-decoration: line-through">custom RV</span> mobile office.
             </p>
             <p>
 							For collaboration or questions; <br>
