--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               You can find me <a href="https://www.instagram.com/boborchard/" target="_blank" class="link-1">snapping photos</a>, traveling around North America, and making things with my hands. My wife and I <a class="link-1" href="https://www.instagram.com/thewebnomads">travel &amp; live full-time</a> in our <span style="text-decoration: line-through">custom RV</span> mobile office.
             </p>
             <p>
-							For collaboration or questions; <br>
+							For collaboration or questions: <br>
           		<a class="link-2" href="mailto:mail@boborchard.com">mail@boborchard.com</a>
 						</p>
 						<p>
