--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							I'm Bob Orchard and I help funded startups and established businesses improve the user experience and design of their SaaS products.
 						</h2>
             					<p>
-							Currently building <a class="link-1" href="https://campgroundbooking.com" target="_blank">CampgroundBooking</a>
+							Product Manager at <a class="link-1" href="https://share.getf.ly/r76h2k" target="_blank">Flywheel</a>. Building <a class="link-1" href="https://campgroundbooking.com" target="_blank">CampgroundBooking</a>
 						</p>
 						<p>
 							Formerly at at <a class="link-1" href="https://chargify.com" target="_blank">Chargify</a>, <a class="link-1" href="http://tinypint.com" target="_blank">Tinypint</a>, and <a class="link-1" href="https://funeralone.com" target="_blank">FuneralOne</a>
