--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-    <meta name="description" content="I focus on User Experience and Design to solve problems before they happen. English is my first language, but speaking User is my second." />
+    <meta name="description" content="I'm a Product Manager at @heyflywheel. Big on #design, #privacy & #travel. Jeep Owner." />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Bob Orchard | User Experience Designer</title>
+    <title>Bob Orchard | Product Manager</title>
     <link rel="shortcut icon" href="images/ico/favicon.ico">
     <link rel="apple-touch-icon" href="images/ico/apple-touch-icon.png"/>
     <link rel="stylesheet" type="text/css" href="css/fonts/hk-grotesk/style.css">
@@ -25,26 +25,20 @@
     <div class="content-wrap">
         <div class="content">
 						<h1>
-							Hi there!
+							Bob Orchard
 						</h2>
 						<h2>
-							I'm Bob Orchard and I help funded startups and established businesses improve the user experience and design of their SaaS products.
+							Product Manager at <a class="link-1" href="https://share.getf.ly/r76h2k" target="_blank">Flywheel</a>.
 						</h2>
             					<p>
-							Product Manager at <a class="link-1" href="https://share.getf.ly/r76h2k" target="_blank">Flywheel</a>. Building <a class="link-1" href="https://campgroundbooking.com" target="_blank">CampgroundBooking</a>
+							Building <a class="link-1" href="https://campgroundbooking.com" target="_blank">CampgroundBooking</a>
 						</p>
 						<p>
 							Formerly at at <a class="link-1" href="https://chargify.com" target="_blank">Chargify</a>, <a class="link-1" href="http://tinypint.com" target="_blank">Tinypint</a>, and <a class="link-1" href="https://funeralone.com" target="_blank">FuneralOne</a>
 						</p>
-						<p>
-							I post some of my design work <a class="link-1" href="https://dribbble.com/boborchard" target="_blank">here</a> and commit code <a class="link-1" href="https://github.com/boborchard" target="_blank">here</a>.
-						</p>
-            <p>
-              You can find me <a href="https://www.instagram.com/boborchard/" target="_blank" class="link-1">snapping photos</a>, traveling around North America, and making things with my hands. My wife and I <a class="link-1" href="https://www.instagram.com/thewebnomads">travel &amp; live full-time</a> in our <span style="text-decoration: line-through">custom RV</span> mobile office.
-            </p>
-            <p>
+            					<p>
 							For collaboration or questions: <br>
-          		<a class="link-2" href="mailto:mail@boborchard.com">mail@boborchard.com</a>
+          						<a class="link-2" href="mailto:mail@boborchard.com?subject=Let's work together">mail@boborchard.com</a>
 						</p>
 						<p>
 							<a class="social-link twitter" href="https://twitter.com/boborchard" target="_blank"></a>
