--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
     <div class="content-wrap">
         <div class="content">
 						<h1>
-							Bob Orchard
+							Hi there!
 						</h2>
 						<h2>
-							Product Manager at <a class="link-1" href="https://share.getf.ly/r76h2k" target="_blank">Flywheel</a>.
+							I'm a Product Manager at <a class="link-1" href="https://share.getf.ly/r76h2k" target="_blank">Flywheel</a>.
 						</h2>
+						<p>
+							You can catch me in the hall chatting about #design, #privacy & #travel. Committed Jeep Wrangler owner.
+						</p>
             					<p>
-							Building <a class="link-1" href="https://campgroundbooking.com" target="_blank">CampgroundBooking</a>
+							In my free time I'm building <a class="link-1" href="https://campgroundbooking.com" target="_blank">CampgroundBooking</a>
 						</p>
 						<p>
 							Formerly at at <a class="link-1" href="https://chargify.com" target="_blank">Chargify</a>, <a class="link-1" href="http://tinypint.com" target="_blank">Tinypint</a>, and <a class="link-1" href="https://funeralone.com" target="_blank">FuneralOne</a>
