--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							Hi there!
 						</h2>
 						<h2>
-							I'm a Product Manager at <a class="link-1" href="https://gatsbyjs.com" target="_blank">GatsbyJS</a>.
+							I'm a Product Manager at <a class="link-1" href="https://gatsbyjs.com" target="_blank">Gatsby</a>.
 						</h2>
 						<p>
 							You can catch me in the hall chatting about #product, #saas, #design, #privacy & #travel. Committed Jeep Wrangler owner.
